# house-hunting-ai-agent-harness

./: .env.example  .gitignore  .mcp.json  AGENTS.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: listing-extractor.md
.claude/commands/: house-hunt-smoke.md
.github/workflows/: ci.yml  evals.yml
docs/: INTEGRATION_UPDATES.md  README.md  architecture.md  browser-assisted-changelog.md  browser-assisted-guide.md  claude-code-parity-plan.md  connectors.md  evals.md  guardrails.md  harness-controls.md  mcp-usage.md  providers.md  roadmap.md
docs/integrations/: homestocompare-publishing-implementation.md  homestocompare.md
docs/planning/: 01-commute-times.md  02-richer-comparison.md  03-area-data.md  04-persistent-sessions.md  05-image-analysis.md  06-export.md  07-h2c-verified-comparison-publishing.md  README.md
evals/datasets/: buyer_profiles.jsonl  comparison_cases.jsonl  listings_small.jsonl
evals/tests/: test_architecture_boundaries.py  test_browser_extraction.py  test_cli.py  test_comparison.py  test_explanation.py  test_explanations.py  test_export_csv.py  test_export_html.py  test_guardrails.py  test_h2c_publishing.py  test_homestocompare_connector.py  test_intake.py  test_listing_input.py  test_listing_search.py  test_mcp_server.py  test_orchestrator_browser_mode.py  test_ranking.py  test_trace_viewer.py  test_verification.py
examples/: sample_buyer_session.md  sample_market_watch_config.yaml
src/: __init__.py  app.py  config.py
src/connectors/: anthropic_adapter.py  homestocompare_connector.py  local_csv.py  (+6 more)
(+79 files in other folders)
