[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "house-hunting-agent-harness"
version = "0.1.0"
description = "Reference harness for buyer-side real estate assistants."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "House Hunting Agent Harness Contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8"]

[project.scripts]
house-hunt = "src.ui.cli:main"

[tool.setuptools]
packages = ["src", "src.harness", "src.skills", "src.tools", "src.connectors", "src.models", "src.ui"]

[tool.pytest.ini_options]
testpaths = ["evals/tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
