[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "house-hunting-agent-harness"
version = "0.1.0"
description = "Reference harness for buyer-side real estate assistants."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "House Hunting Agent Harness Contributors" }]
dependencies = [
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8"]

[project.scripts]
house-hunt = "src.ui.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["evals/tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
